<resources>
    <string name="app_name">Zen</string>
    <string name="title_home">Meditate</string>
    <string name="title_stats">Stats</string>
    <string name="title_more">More</string>

    //DRAWABLE
    <string name="button_ready">Find Peace</string>
    <string name="button_pause">pause</string>
    <string name="button_finished">MORE ZEN</string>
    <string name="timer_finished">ZEN ACHIEVED</string>
    <string name="curr_timer">""</string>


    //stats fragment
    <string name="stats_title">Your stats</string>
    <string name="stats_header1">spent meditating</string>
    <string name="stats_header2">Daily Streak</string>
    <string name="stats_header3">Zen Achieved</string>
    <string name="stats_header4">Goals Beaten</string>
    <string name="stats_header5">Miscellaneous</string>

    //home fragment
    <string name="home_title">Zen</string>
    <string name="home_headerReady">let us finish what we start</string>
    <string name="home_headerFinish">daily peace found</string>

    //more fragment
    <string name="more_title">Quote of the Day</string>
    <string name="more_header1">Duration</string>
    <string name="more_header2">Ambiance</string>
    <string name="more_header3">Goals</string>
    <string name="more_header4">Journal</string>
    <string name="more_button1">My Goals</string>
    <string name="more_button2">Scribe!</string>

    //analysis fragment
    <string name="analy_title">Your progress</string>
    <string name="analy_button1">3 Days</string>
    <string name="analy_button2">7 Days</string>
    <string name="analy_button3">1 Month</string>
    <string name="analy_button4">1 Year</string>


    //peace activity
    <string name="peace_msg">Way to go!</string>
    <string name="peace_header">Current Streak</string>


    //dead activity
    <string name="dead_msg">Oh no! Looks liked you missed a day!</string>
    <string name="dead_header">Current Streak</string>

    //start activity
    <string name="start_msg">Welcome back</string>

    //Notifications
    <string name="fcm_message">

    </string>
    <string name="default_notification_channel_id">

    </string>


</resources>
