<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/analy_title"
            android:padding="20dp"/>

        <com.robinhood.spark.SparkView
            android:id="@+id/sparkview"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_height="300dp"
            app:spark_lineColor="@color/text_white"
            android:background="@drawable/bg_graph"
            android:elevation="10dp"
            android:padding="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/threeDayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="24dp"
            android:textSize="12sp"
            android:text="@string/analy_button1"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/weekBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="24dp"
            android:textSize="12sp"
            android:text="@string/analy_button2"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/monthBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="24dp"
            android:textSize="12sp"
            android:text="@string/analy_button3"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/yearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="24dp"
            android:textSize="12sp"
            android:text="@string/analy_button4"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:textStyle="bold" />

    </LinearLayout>


    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

