<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_white"
                tools:text="Overview"
                android:text="@string/stats_title"
                android:textSize="24dp"
                android:textAlignment="textStart"
                android:padding="20dp"
                android:textColor="@color/text_main"/>


            <TextView
                android:id="@+id/counter1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_white"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="60dp"
                android:textStyle="bold"
                tools:text="420 Minutes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_white"
                tools:text="spent meditating"
                android:paddingTop="10dp"
                android:text="@string/stats_header1"
                android:textSize="24dp"
                android:textAlignment="textEnd"
                android:paddingRight="20dp"

                android:textColor="@color/text_main"/>



            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp">

            </Space>


            <GridLayout
                android:id="@+id/grid_stats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="2"
                app:layout_constraintBottom_toBottomOf="parent">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingTop="15dp"
                        android:text="@string/stats_header2"
                        android:textAlignment="textStart"
                        android:textColor="@color/text_gray"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/counter2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:padding="15dp"
                        tools:text="sup"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/fire"
                        android:layout_marginBottom="10dp">

                    </ImageView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingTop="15dp"
                        android:text="@string/stats_header3"
                        android:textAlignment="textStart"
                        android:textColor="@color/text_gray"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/counter3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:padding="15dp"
                        tools:text="sup"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/happy"
                        android:layout_marginBottom="10dp">

                    </ImageView>



                </LinearLayout>

                 </GridLayout>


         </LinearLayout>

</LinearLayout>
