<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/stats_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autoSizeMaxTextSize="80sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/stats_header1"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        app:layout_constraintBottom_toTopOf="@id/space1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/stats_title" />

<!--    <TextView-->
<!--        android:id="@+id/stats_header1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:autoSizeMaxTextSize="80sp"-->
<!--        android:autoSizeMinTextSize="12sp"-->
<!--        android:autoSizeStepGranularity="2sp"-->
<!--        android:autoSizeTextType="uniform"-->
<!--        android:text="@string/stats_header1"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/colorPrimaryDark"-->
<!--        app:layout_constraintBottom_toTopOf="@id/statsT_counter1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/space1"/>-->

    <TextView
        android:id="@+id/statsT_counter1"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autoSizeMaxTextSize="200sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="1234"
        android:textAlignment="center"
        android:textColor="@color/text_main"
        app:layout_constraintBottom_toTopOf="@id/space2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space1" />


    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/statsT_counter1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="410dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/statsT_header3"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintWidth_percent="0.5"

        android:text="@string/stats_header3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/space3"
        app:layout_constraintStart_toEndOf="@id/statsT_header2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <TextView
        android:id="@+id/statsT_header2"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/stats_header2"
        android:textAlignment="center"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/statsT_header3"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        app:layout_constraintTop_toBottomOf="@id/statsT_header3" />

    <TextView
        android:id="@+id/statsT_counter3"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="100"
        app:layout_constraintWidth_percent="0.5"

        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3" />

    <TextView
        android:id="@+id/statsT_counter2"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="100"
        android:textColor="@color/finished"
        android:textAlignment="center"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3"/>
    <Space
        android:id="@+id/space4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/statsT_counter2"/>


</androidx.constraintlayout.widget.ConstraintLayout>